--- a/LawSuits/LawSuits.csproj
+++ b/LawSuits/LawSuits.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
