--- a/LawSuits/appsettings.json
+++ b/LawSuits/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ProjectDatabase": "Server=DESKTOP-KHKVBJ8;Database=master;Trusted_Connection=True;"
+    "ProjectDatabase": "Server=DESKTOP-ADEPLQ1;Database=ProjectDatabase;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
